Tighten Mega-Milestone 7 determinism